Soften Brush doesn't work in UV/Image editor mode. #41956

Closed
opened 2014-09-25 20:32:13 +02:00 by aron3d · 8 comments
aron3d commented 2014-09-25 20:32:13 +02:00 (Migrated from localhost:3001)

System Information
Mac OS X 10.9.5, 4Gb of Ram and Intel HD Graphics 4000

Blender Version
2.72 RC1

Short description of error
The soften brush doesn't work in UV/Image editormode. When I press click and move the brush to soft the area, nothing happens. I haven't any issue with this brush in 3D mode, It works perfectly.

Exact steps for others to reproduce the error
1-Use de default cube when you open Blender in 3D Mode/view.
2-Split the edit window, them, in the new one, set it as UV/Image Editor view.
3-Unwrap a UV Map of the cube in Edit mode and create a texture.
4-Go to Texture Paint mode and paint something in the UV image in the new created UV/Image Editor window (created in the step 2).
5-Now, in the created UV/Image Editor Window, try to soft what ever that you painted in the step 4. You will understand the problem.

**System Information** Mac OS X 10.9.5, 4Gb of Ram and Intel HD Graphics 4000 **Blender Version** 2.72 RC1 **Short description of error** The soften brush doesn't work in UV/Image editormode. When I press click and move the brush to soft the area, nothing happens. I haven't any issue with this brush in 3D mode, It works perfectly. **Exact steps for others to reproduce the error** 1-Use de default cube when you open Blender in 3D Mode/view. 2-Split the edit window, them, in the new one, set it as UV/Image Editor view. 3-Unwrap a UV Map of the cube in Edit mode and create a texture. 4-Go to Texture Paint mode and paint something in the UV image in the new created UV/Image Editor window (created in the step 2). 5-Now, in the created UV/Image Editor Window, try to soft what ever that you painted in the step 4. You will understand the problem.
aron3d commented 2014-09-25 20:32:13 +02:00 (Migrated from localhost:3001)
Author

Changed status to: 'Open'

Changed status to: 'Open'
aron3d commented 2014-09-25 20:32:13 +02:00 (Migrated from localhost:3001)
Author

Added subscriber: @aron3d

Added subscriber: @aron3d
blender-admin changed title from Soften Brush dosn't work in UV/Image editor mode. to Soften Brush doesn't work in UV/Image editor mode. 2014-09-25 21:10:53 +02:00
Antonis Ryakiotakis was assigned by Sergey Sharybin 2014-09-26 11:10:50 +02:00

Added subscribers: @Psy-Fi, @Sergey

Added subscribers: @Psy-Fi, @Sergey

@Psy-Fi, mind having a look? Thanks! :)

@Psy-Fi, mind having a look? Thanks! :)
Author

This issue was referenced by a5159b5fba

This issue was referenced by a5159b5fba951197e3571fb06f62809409fb4306

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit a5159b5fba.

Closed by commit a5159b5fba.
Author

This issue was referenced by 359dd9b7b7

This issue was referenced by 359dd9b7b76c204a1fb3497c061ed0bd1ee8e6f1
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41956
No description provided.