Fix T41956, Soften brush does not work

Disallow blur radius zero (versioning error).

Also fix gaussian distibution for blurring

This is to be included in the final release.